Fixed a typo in oil futures

--- a/content-org/notes/oil_futures.org
+++ b/content-org/notes/oil_futures.org
@@ -21,7 +21,7 @@ Futures are designed for people who actually want to purchase oil, or any future
 
 That doesn't stop a whole portion of Wall Street who speculate on these futures however.
 
-These are some funny stories about junior traders who have forgotten to sell their contract and have been required to take delivery of hundreds of physical barrels of oil.
+There are some funny stories about junior traders who have forgotten to sell their contract and have been required to take delivery of hundreds of physical barrels of oil.
 
 * Receiving delivery
 
