Moved some zettels around

--- a/content-org/zettels/is_it_worth_searching_for_signal_in_the_wrong_noisy_medium.org
+++ b/content-org/zettels/is_it_worth_searching_for_signal_in_the_wrong_noisy_medium.org
@@ -2,3 +2,12 @@
 #+setupfile: ./hugo_setup.org
 #+hugo_slug: is_it_worth_searching_for_signal_in_the_wrong_noisy_medium
 #+roam_tag:
+
+Often times, I come across a rare gem on Twitter, such as long tweet storms
+
+That's great but there's usually a load of trudging through pure crap
+
+I wonder if those insights are worth sticking out for compared to using the noise bearing time more effectively
+
+Similarly, if a long-winded idea is being shared on eg; Twitter, will an ineffective medium being chosen hinder the message trying to be conveyed?
+
