--- a/content/blog/25.md
+++ b/content/blog/25.md
@@ -12,6 +12,7 @@ draft = false
 <div class="heading">Table of Contents</div>
 
 - [The current state](#the-current-state)
+- [Where I'd like to get to](#where-i-d-like-to-get-to)
 - [Some topics I'd like to look into](#some-topics-i-d-like-to-look-into)
 - [Other things to add](#other-things-to-add)
 - [How do I get there](#how-do-i-get-there)
@@ -31,7 +32,8 @@ My site has gone through plenty of iterations, with the current being a static s
 
 Along the way, pages have disappeared. There used to be a projects page which never got filled in properly. There was also an archive of reviews I wrote years back. They're still there but not publically exposed anywhere.
 
-\## Where I'd like to get to
+
+## Where I'd like to get to {#where-i-d-like-to-get-to}
 
 I always seem to fumble around a lot with Markdown. It works great but there's always things missing I wish I had. Some markdown libraries support tables while some don't, or defer to extensions.
 
