--- a/content-org/about.org
+++ b/content-org/about.org
@@ -5,6 +5,7 @@
 * About
 :PROPERTIES:
 :EXPORT_FILE_NAME: /about
+:EXPORT_HUGO_CUSTOM_FRONT_MATTER: :hidedate true
 :END:
 
 I never write as much as I wish I would but there's a handful of articles you can read.
