--- a/content-org/notes/hugo_setup.org
+++ b/content-org/notes/hugo_setup.org
@@ -1,4 +1,5 @@
 #+hugo_base_dir: ../..
 #+hugo_auto_set_lastmod: t
 #+options: H:2
-#+hugo_section: z
+#+hugo_section: notes
+#+hugo_custom_front_matter: :hidedate true
