--- a/content-org/notes/emacs.org
+++ b/content-org/notes/emacs.org
@@ -7,7 +7,7 @@
 #+begin_src shell
 git clone -b emacs-27 git://git.sv.gnu.org/emacs.git
 cd emacs
-sudo apt-get build-deps emacs
+sudo apt-get build-dep emacs
 ./autogen.sh
 ./configure --with-x-toolkit=lucid --with-mailutils
 make -j4
