--- a/content-org/about.org
+++ b/content-org/about.org
@@ -18,12 +18,14 @@ My resume is hosted [[/resume.pdf][here]] if you want a better idea of what I've
 
 You can find me on the web in a bunch of places:
 
+- Discord (Sentry#7301)
 - [[https://github.com/marcus-crane][Github]]
 - [[https://news.ycombinator.com/user?id=spondyl][Hacker News]]
 - [[https://instagram.com/sentryism][Instagram]]
 - [[https://linkedin.com/in/marcus-crane][Linkedin]]
 - [[https://lobste.rs/u/sentry][Lobsters]]
 - [[https://steamcommunity.com/id/sandtree][Steam]]
+- [[https://trakt.tv/user/sentry][Trakt]]
 - [[https://twitter.com/sentreh][Twitter]]
 
 Finally, there's always trusty old email which is my first name @ this domain.
