Added Switch friend code to about page

--- a/content-org/about.org
+++ b/content-org/about.org
@@ -24,6 +24,7 @@ You can find me on the web in a bunch of places:
 - [[https://instagram.com/sentryism][Instagram]]
 - [[https://linkedin.com/in/marcus-crane][Linkedin]]
 - [[https://lobste.rs/u/sentry][Lobsters]]
+- Nintendo Switch (SW-5686-4176-9692)
 - [[https://steamcommunity.com/id/sandtree][Steam]]
 - [[https://trakt.tv/user/sentry][Trakt]]
 - [[https://twitter.com/sentreh][Twitter]]
