--- a/content/about.org
+++ b/content/about.org
@@ -2,21 +2,6 @@
 
 I never write as much as I wish I would but there's a handful of articles you can read.
 
-I currently work at [[https://xero.com/nz/][Xero]], a cloud accounting software company.
+I currently work at [[https://www.mercedes-benz.co.nz/][Mercedes-Benz New Zealand]]. I think we make cars or something.
 
-In particular, I'm a [[https://en.wikipedia.org/wiki/Site_Reliability_Engineering][Site Reliability Engineer]] based out of our office in [[https://en.wikipedia.org/wiki/Auckland][Auckland, New Zealand]].
-
-You can find me on the web in a bunch of places:
-
-- Discord (Sentry#7301)
-- [[https://github.com/marcus-crane][Github]]
-- [[https://news.ycombinator.com/user?id=spondyl][Hacker News]]
-- [[https://instagram.com/sentryism][Instagram]]
-- [[https://linkedin.com/in/marcus-crane][Linkedin]]
-- [[https://lobste.rs/u/sentry][Lobsters]]
-- Nintendo Switch (SW-5686-4176-9692)
-- [[https://steamcommunity.com/id/sandtree][Steam]]
-- [[https://trakt.tv/user/sentry][Trakt]]
-- [[https://twitter.com/sentreh][Twitter]]
-
-Finally, there's always trusty old email which is my first name @ this domain.
+In particular, I'm a [[https://en.wikipedia.org/wiki/Site_Reliability_Engineering][Site Reliability Engineer]] based out of our office in [[https://en.wikipedia.org/wiki/Mount_Wellington,_New_Zealand][Mount Wellington, New Zealand]].
